objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Proposal_Case_Created__c</fullName>
        <label>Proposal Case Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>This field tracks many times an Opportunity has been pushed from month to month</description>
        <inlineHelpText>This field tracks many times an Opportunity has been pushed from month to month</inlineHelpText>
        <label>Push Counter</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFI_RFP_Received_Date__c</fullName>
        <description>This field is used to capture the date when the RFP or RFI is received.</description>
        <label>RFI/RFP Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Notification_Time__c</fullName>
        <description>This field is used in workflow to send notification based on RFP due date.</description>
        <label>RFP Notification Time</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Effective_Date__c</fullName>
        <label>Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate_End_Date__c</fullName>
        <description>This field is used to capture the end of the contract for the opportunity products.</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rating_Status__c</fullName>
        <label>Rating Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined</fullName>
                </value>
                <value>
                    <fullName>Rated</fullName>
                </value>
                <value>
                    <fullName>Actuarial-Released</fullName>
                    <label>Actuarial Release</label>
                </value>
                <value>
                    <fullName>Underwriting-Released</fullName>
                    <label>Underwriting Release</label>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Marketing Release</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Pended</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Underwriting Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This field is used to capture the region of the opportunity.</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>HCSC_Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>000</fullName>
                </value>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>DN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>Renewal Date for Opportunity .</description>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Document_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Document Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Upload_DateTime__c</fullName>
        <label>Renewal Upload DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Zip_Code__c</fullName>
        <label>Renewal Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Received_Date__c</fullName>
        <description>This field is used to capture the date when a request is received.</description>
        <label>Request Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Effective_Date__c</fullName>
        <description>This field is used to capture the requested effective date for the opportunity.</description>
        <label>Opportunity Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Data_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture whether Risk Data has been received for existing CMS groups</description>
        <inlineHelpText>Whether Risk Data has been received for existing CMS groups</inlineHelpText>
        <label>Risk Data Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SGR_Account_Number__c</fullName>
        <formula>Account.External_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Opportunity_Access__c</fullName>
        <description>Analytical Opportunity Access</description>
        <formula>IF(RecordType.DeveloperName=&apos;SGR_Analytical_Opportunity&apos;, 
IF(AND(OR(CurrentUserProfileName__c=&apos;SGR Operations User&apos;,CurrentUserProfileName__c=&apos;SG Service Center_LEX&apos;,CurrentUserProfileName__c=&apos;SGR_Group Verifier&apos;),
OR(ISPICKVAL(Rating_Status__c,&apos;Initiated&apos;),ISPICKVAL(Rating_Status__c,&apos;Rated&apos;),ISPICKVAL(Rating_Status__c,&apos;Actuarial-Released&apos;)), RecordType.DeveloperName=&apos;SGR_Analytical_Opportunity&apos; ),1,0), 0)</formula>
        <inlineHelpText>Analytical Opportunity Access</inlineHelpText>
        <label>SGR Opportunity Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SGR_Opportunity_Auto_Number__c</fullName>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Opportunity Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SGR_Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Opportunity_Type__c</fullName>
        <formula>IF( 
  CONTAINS(RecordType.DeveloperName, &quot;SGR&quot;) , 
  SUBSTITUTE(SUBSTITUTE(RecordType.DeveloperName,&quot;SGR_&quot;, &quot;&quot;),&quot;_Opportunity&quot;,&quot;&quot;),
  &quot;&quot;
)</formula>
        <label>SGR Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Plan_Rate_Access__c</fullName>
        <formula>IF(AND(OR(CurrentUserProfileName__c=&apos;SGR Operations User&apos;,CurrentUserProfileName__c=&apos;SG Service Center_LEX&apos;,CurrentUserProfileName__c=&apos;SGR_Group Verifier&apos;),OR(ISPICKVAL(Rating_Status__c,&apos;Not Defined&apos;),ISPICKVAL(Rating_Status__c,&apos;Rated&apos;),ISPICKVAL(Rating_Status__c,&apos;Actuarial-Released&apos;),ISPICKVAL(Rating_Status__c,&apos;Underwriting-Released&apos;),ISPICKVAL(Rating_Status__c,&apos;Closed&apos;),ISPICKVAL(Rating_Status__c,&apos;Pended&apos;),ISPICKVAL(Rating_Status__c,&apos;Initiated&apos;))),1,0)</formula>
        <label>SGR Plan Rate Access</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SGR_Renewal_Account_Name__c</fullName>
        <label>Renewal Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGR_Workflow_Activity__c</fullName>
        <label>Workflow Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Underwriting Hold</fullName>
                </value>
                <value>
                    <fullName>UW Review - Validation Errors</fullName>
                </value>
                <value>
                    <fullName>Actuarial Gate</fullName>
                </value>
                <value>
                    <fullName>Awaiting BlueSTAR Transfer</fullName>
                </value>
                <value>
                    <fullName>Plan Change in Progress</fullName>
                </value>
                <value>
                    <fullName>Pend in Progress</fullName>
                </value>
                <value>
                    <fullName>Not Eligible to be Transferred</fullName>
                </value>
                <value>
                    <fullName>UW Review</fullName>
                </value>
                <value>
                    <fullName>IT Review - Rating Failed</fullName>
                </value>
                <value>
                    <fullName>Underwriting Review</fullName>
                </value>
                <value>
                    <fullName>Actuarial Release</fullName>
                </value>
                <value>
                    <fullName>Ready for Distribution</fullName>
                </value>
                <value>
                    <fullName>Group Verifier Review - BlueSTAR Transfer</fullName>
                </value>
                <value>
                    <fullName>BlueStar Transfer Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SGR_Workflow_Status__c</fullName>
        <label>Workflow Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Defined</fullName>
                </value>
                <value>
                    <fullName>UW Review</fullName>
                </value>
                <value>
                    <fullName>UW Pended</fullName>
                </value>
                <value>
                    <fullName>Actuarial-Released</fullName>
                </value>
                <value>
                    <fullName>Underwriting-Released</fullName>
                </value>
                <value>
                    <fullName>Rated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC_Code_Description__c</fullName>
        <label>SIC Code Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC__c</fullName>
        <label>SIC</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_Via_Mail_to_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Via Mail to Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Via_Mail_to_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Via Mail to Producer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Eligibility__c</fullName>
        <label>Special Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Exceptions__c</fullName>
        <description>This field is used to capture the special exceptions for a renewal.</description>
        <label>Special Exceptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Finalist Named</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Onboarding Complete</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>RFP Received</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Headed to RFP</fullName>
                </value>
                <value>
                    <fullName>Not Headed to RFP</fullName>
                </value>
                <value>
                    <fullName>RFP Receipt</fullName>
                </value>
                <value>
                    <fullName>In Underwriting</fullName>
                </value>
                <value>
                    <fullName>Final Presentation</fullName>
                </value>
                <value>
                    <fullName>Negotiate</fullName>
                </value>
                <value>
                    <fullName>Review with Client/Broker</fullName>
                </value>
                <value>
                    <fullName>Change Offering</fullName>
                </value>
                <value>
                    <fullName>Standard Renewal</fullName>
                </value>
                <value>
                    <fullName>Strategic Renewal</fullName>
                </value>
                <value>
                    <fullName>Network Request</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <description>Date of Renewal Submit</description>
        <label>Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscribers_Count__c</fullName>
        <description># of Subscribers enrolled for Health and Dental(does not include members count)</description>
        <label>Subscribers Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEFRA__c</fullName>
        <label>TEFRA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Dental_Monthly_Premium__c</fullName>
        <label>Total Dental Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Est_Dental_Insurer_Fees__c</fullName>
        <label>Total Est Dental Insurer Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Est_Medical_Insurer_Fees__c</fullName>
        <label>Total Est Medical Insurer Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Est_Vision_Insurer_Fees__c</fullName>
        <label>Total Est Vision Insurer Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Medical_Monthly_Premium__c</fullName>
        <label>Total Medical Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Notes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Number of Notes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Vision_Monthly_Premium__c</fullName>
        <label>Total Vision Monthly Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Underwriting_Case_Closed_Date_Time__c</fullName>
        <label>Underwriting Case Closed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Underwriting_Case_Closed__c</fullName>
        <description>Date Underwriting Case was closed. Used for reporting. There might be more than one Underwriting Case created so this records the first time an Underwriting Case was closed</description>
        <label>Underwriting Case Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Underwriting_Case_Created__c</fullName>
        <description>Hidden custom picklist used in reports to determine if an Underwriting Case has been created for an Opportunity</description>
        <label>Underwriting Case Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriting_Case_Submitted__c</fullName>
        <label>Underwriting Case Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_Activity_Added_Date__c</fullName>
        <label>Weekly Activity Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_Activity_Modified_Date__c</fullName>
        <label>Weekly Activity Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weekly_Activity_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Weekly Activity Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wellness_Consulting_Coordinator__c</fullName>
        <description>This field is used to capture the type of Wellness Consulting Coordinator proposed as part of the opportunity</description>
        <inlineHelpText>Type of Wellness Consulting Coordinator the group is interested in purchasing</inlineHelpText>
        <label>Wellness Consulting Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wellness_Consulting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if Wellness Consulting is proposed as part of the opportunity</description>
        <inlineHelpText>Is this group interested in Wellness Consulting?</inlineHelpText>
        <label>Wellness Consulting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Win_Prob_on_Won__c</fullName>
        <label>Win Prob on Won</label>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Win_Probability__c</field>
            <operation>lessThan</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Workflow_System_Status__c</fullName>
        <label>Workflow System Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to Fetch Mapped Plans</fullName>
                    <default>true</default>
                    <label>Ready to Fetch Mapped Plans</label>
                </value>
                <value>
                    <fullName>Ready to Validate</fullName>
                </value>
                <value>
                    <fullName>Failed Validation</fullName>
                </value>
                <value>
                    <fullName>Ready to Rate</fullName>
                </value>
                <value>
                    <fullName>Ready For Gate Processing</fullName>
                </value>
                <value>
                    <fullName>Ready to Send to B-Engaged</fullName>
                </value>
                <value>
                    <fullName>Ready to Send to BlueSTAR</fullName>
                </value>
                <value>
                    <fullName>Not Eligible to Send to BlueSTAR</fullName>
                </value>
                <value>
                    <fullName>Workflow Completed</fullName>
                </value>
                <value>
                    <fullName>Awaiting Review Task Completion</fullName>
                </value>
                <value>
                    <fullName>Awaiting Hold Task Completion</fullName>
                </value>
                <value>
                    <fullName>Gate Processing Completed</fullName>
                </value>
                <value>
                    <fullName>Failed Rating</fullName>
                </value>
                <value>
                    <fullName>Ready for BlueSTAR Initiation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <inlineHelpText>changed field from number to text as suggested by cesar</inlineHelpText>
        <label>Zip Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>full_prob_count__c</fullName>
        <label>full prob count</label>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Win_Probability__c</field>
            <operation>lessThan</operation>
            <value>50</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>renewal_medical_product_count__c</fullName>
        <label>renewal medical product count</label>
        <summarizedField>Opportunity_Product__c.Projected_Members__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Add-On Gain, Add-On Loss</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>risk_comparison__c</fullName>
        <formula>IF(Full_Product_Count__c = full_prob_count__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>risk comparison</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sgrAccountHoldReason__c</fullName>
        <formula>IF(INCLUDES(Account.SGR_Hold_Reason__c ,&apos;Wage &amp; Tax Audit&apos;),&apos;Wage &amp; Tax Audit; &apos;,NULL)+&apos;&apos; +
IF(INCLUDES(Account.SGR_Hold_Reason__c ,&apos;1st Year Renewal&apos;),&apos;1st Year Renewal; &apos;,NULL)+&apos;&apos;+
IF(INCLUDES(Account.SGR_Hold_Reason__c ,&apos;Block Acquisition&apos;),&apos;Block Acquisition; &apos;,NULL)+&apos;&apos;+
IF(INCLUDES(Account.SGR_Hold_Reason__c ,&apos;Special Adjustments&apos;),&apos;Special Adjustments; &apos;,NULL)+&apos;&apos; +
IF(INCLUDES(Account.SGR_Hold_Reason__c ,&apos;Miscellaneous&apos;),&apos;Miscellaneous; &apos;,NULL)+&apos;&apos; +
IF(INCLUDES(Account.SGR_Hold_Reason__c ,&apos;Market Segment Verification&apos;),&apos;Market Segment Verification; &apos;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Hold Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>weighted_projected_medical_health_member__c</fullName>
        <label>weighted projected medical health member</label>
        <summarizedField>Opportunity_Product__c.Weighted_Member__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Category__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>In Progress, Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Product__c.Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Owner_of_Record__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Requested_Effective_Date__c</columns>
        <columns>Batch_Type__c</columns>
        <columns>Account_Market_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Renewal</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MY_wish</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>MY wish</label>
        <sharedTo>
            <role>GEMS_CDHP_Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyQueue</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>MyQueue</label>
    </listViews>
    <listViews>
        <fullName>My_Opportunites</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SGR_Opportunity_Access__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Opportunites</label>
    </listViews>
    <listViews>
        <fullName>My_Opptys_Created_Today</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Lost</value>
        </filters>
        <label>My Opptys Created Today</label>
    </listViews>
    <listViews>
        <fullName>My_Queue</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>SGR_Account_Number__c</columns>
        <columns>External_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>sgrAccountHoldReason__c</columns>
        <columns>Renewal_Date__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Account_Market_Segment__c</columns>
        <columns>HCSC_Division__c</columns>
        <columns>SGR_Workflow_Activity__c</columns>
        <columns>Rating_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>SGR_Workflow_Activity__c</field>
            <operation>equals</operation>
            <value>UW Review - Validation Errors</value>
        </filters>
        <filters>
            <field>SGR_Workflow_Activity__c</field>
            <operation>equals</operation>
            <value>Underwriting Hold</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SGR_Production_Opportunity</value>
        </filters>
        <label>My Queue</label>
        <sharedTo>
            <role>UnderwriterUser</role>
        </sharedTo>
    </listViews>
</CustomObject>